[수정] 사전 동네(수동)게임방 생성 기능 수정